--- a/.github/workflows/main_macaronesia-backend-api.yml
+++ b/.github/workflows/main_macaronesia-backend-api.yml
@@ -12,12 +12,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      NODE_ENV: ${{ secrets.NODE_ENV }}
-      PORT: ${{ secrets.PORT }}
-      DB_URI: ${{ secrets.DB_URI }}
-      PROD_DB_URI: ${{ secrets.PROD_DB_URI }}
-      HOST_NAME: ${{ secrets.HOST_NAME }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -32,14 +27,11 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -65,3 +57,19 @@ jobs:
           slot-name: "Production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8AA77DAF5EC342BBACBD8B6F769391C1 }}
           package: .
+
+      - name: Set up Node.js version
+        uses: actions/setup-node@v1
+        with:
+          node-version: "18.x"
+
+      - name: Set up Node.js version
+        env:
+          NODE_ENV: ${{ secrets.NODE_ENV }}
+          DB_URI: ${{ secrets.DB_URI }}
+          PROD_DB_URI: ${{ secrets.PROD_DB_URI }}
+          HOST_NAME: ${{ secrets.HOST_NAME }}
+          run: |
+            npm run init-db
+        #               - name: Zip artifact for deployment
+        # run: zip release.zip ./* -r
