--- a/.github/workflows/main_macaronesia-backend-api.yml
+++ b/.github/workflows/main_macaronesia-backend-api.yml
@@ -12,7 +12,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      NODE_ENV: ${{ secrets.NODE_ENV }}
+      PORT: ${{ secrets.PORT }}
+      DB_URI: ${{ secrets.DB_URI }}
+      PROD_DB_URI: ${{ secrets.PROD_DB_URI }}
+      HOST_NAME: ${{ secrets.HOST_NAME }}
     steps:
       - uses: actions/checkout@v4
 
@@ -27,17 +32,20 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: "Production"
+      name: Production
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -57,19 +65,3 @@ jobs:
           slot-name: "Production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8AA77DAF5EC342BBACBD8B6F769391C1 }}
           package: .
-
-      - name: Set up Node.js version
-        uses: actions/setup-node@v1
-        with:
-          node-version: "18.x"
-
-      - name: Set up Node.js version
-        env:
-          NODE_ENV: ${{ secrets.NODE_ENV }}
-          DB_URI: ${{ secrets.DB_URI }}
-          PROD_DB_URI: ${{ secrets.PROD_DB_URI }}
-          HOST_NAME: ${{ secrets.HOST_NAME }}
-          run: |
-            npm run init-db
-        #               - name: Zip artifact for deployment
-        # run: zip release.zip ./* -r
