--- a/.github/workflows/main_macaronesia-backend-api.yml
+++ b/.github/workflows/main_macaronesia-backend-api.yml
@@ -29,16 +29,16 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
+          npm run test --if-present
 
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
-      # - name: Zip artifact for deployment
-      #   run: zip release.zip ./* -r
-
-      # - name: Upload artifact for deployment job
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: node-app
-      #     path: release.zip
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v3
+        with:
+          name: node-app
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
