--- a/.github/workflows/main_macaronesia-backend-api.yml
+++ b/.github/workflows/main_macaronesia-backend-api.yml
@@ -64,3 +64,8 @@ jobs:
           slot-name: "Production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8AA77DAF5EC342BBACBD8B6F769391C1 }}
           package: .
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+          npm run test --if-present
