--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@azure/identity": "^2.0.4",
+    "@azure/keyvault-secrets": "^4.4.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
