--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "build": "tsc && node dist/index.js"
+    "start": "node ./bin/www"
   },
   "keywords": [],
   "author": "",
