--- a/.github/workflows/main_macaronesia-backend-api.yml
+++ b/.github/workflows/main_macaronesia-backend-api.yml
@@ -53,7 +53,7 @@ jobs:
         run: unzip release.zip
 
       - name: Prueba
-        run: console.log(process.env)
+        run: echo ${{ env }}
 
       - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
