--- a/.github/workflows/main_macaronesia-backend-api.yml
+++ b/.github/workflows/main_macaronesia-backend-api.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - macronesia-backend-api
+name: Build and deploy Node.js app to Azure Web App - Macaronesia-backend-api
 
 on:
   push:
@@ -58,5 +58,5 @@ jobs:
         with:
           app-name: "Macaronesia-backend-api"
           slot-name: "Production"
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8AA77DAF5EC342BBACBD8B6F769391C1 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9D06C61BE2EB428D93DB3969DDD8DFE5 }}
           package: .
