--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server.js",
+    "dev": "npx nodemon"
   },
   "keywords": [],
   "author": "",
