--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-macaronesia",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "node index.ts",
     "dev": "npx nodemon"
