--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "node index.ts",
+    "start": "npx ts-node src/index.ts",
     "dev": "npx nodemon"
   },
   "keywords": [],
