--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.20",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "@azure/identity": "^2.0.4",
