--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-macaronesia",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "start": "npx ts-node src/index.ts"
   },
@@ -18,8 +18,6 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "@azure/identity": "^2.0.4",
-    "@azure/keyvault-secrets": "^4.4.0",
     "body-parser": "^1.20.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
